go-redis-kubernetes-main/kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubernetes-challenge
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /qod
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /qod
        pathType: Prefix
        backend:
          service:
            name: qod
            port:
              number: 80
      - path: /kube-challenge
        pathType: Prefix
        backend:
          service:
            name: kubernetes-challenge
            port:
              number: 80
